test/fails/bad_functions/attributes1.lgl
int f(varying int x) { // Can't include an attribute in NOT MAIN
    return f(x);
}

void main() {
    print f(5);
}